--- a/my second project/css/styles.css
+++ b/my second project/css/styles.css
@@ -17,3 +17,22 @@ h1 {
   ul {
     line-height: 40px;
   }
+  h3 {
+    color: red;
+    font-style: oblique;
+    text-align: inherit;
+  }
+  h4 {
+    color :seagreen;
+    font-size: x-large;
+  }
+  h5 {
+    color: skyblue;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: inherit;
+    font-size: x-large;
+  }
+  image1 {
+    width: 200px;
+    height: auto;
+  }
