--- a/my portfolio/css/styles.css
+++ b/my portfolio/css/styles.css
@@ -59,4 +59,15 @@ nav ul li a{
     font-family: myriad pro regular;
     color: burlywood;
     font-size: 30px;
+    line-height: 30px;
+}
+.text-container p{
+    line-height: 0px;
+    margin: 45px 0px 25px;
+}
+.text-container{
+    position: absolute;
+    left: 13%;
+    top: 42%;
+    transform: translate(-13%,-42%);
 }
