--- a/my portfolio/css/styles.css
+++ b/my portfolio/css/styles.css
@@ -100,3 +100,36 @@ button:active{
     left: 70%;
     transform: translateX(-70%);
 }
+.about-container{
+    width: 80%;
+    height: 330px;
+    background-color: salmon;
+    border-radius: 20px;
+    box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+    display: flex;
+    margin: -7% auto 20px auto;
+    position: relative;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.about-container img{
+    height: 250px;
+}
+.about-text{
+    width: 550px;
+}
+.about-text p:nth-last-child(1){
+    color: green;
+    font-family: myriad pro;
+    font-weight: bold;
+    font-size: 23px;
+    line-height: 0px;
+}
+.about-text p:nth-child(2){
+    color: skyblue;
+    font-size: 13px;
+    font-family: myriad pro;
+    font-weight: bold;
+    line-height: 5px;
+}
+
