--- a/my portfolio/css/styles.css
+++ b/my portfolio/css/styles.css
@@ -148,7 +148,7 @@ button:active{
     background-color: aliceblue;
 }
 .projects{
-    height: 600px;
+    height: 200px;
     background-color: seagreen;
     padding: 2% 10% 0px 10%;
 }
@@ -174,16 +174,31 @@ button:active{
     width: 500px;
     margin: 50px 0px;
 }
-.box-1,.box-2,.box-3{
-    width: 3oopx;
-    height: 320px;
-    background-repeat: no-repeat;
+.Contact-me{
+    width: 100%;
+    height: 280px;
     background-size: cover;
-    box-shadow: 2px 2px 12px rgba(0,0,0,0.3);
-}
-.box-container{
+    background-repeat: no-repeat;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.Contact-me p{
+    color: royalblue;
+    font-size: 30px;
+    font-family: calibri;
+    font-weight: bold;
+    border-bottom: 2px solid #ffffff;
+}
+.Contact-me button{
+    width: 200px;
+    height: 40px;
+    background-color: skyblue;
+    outline: none;
+    border: none;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 
